<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- 
		Using spring-boot-starter-parent to update dependencies easier and ensure that all dependencies work well together
		this parent having most of the commonly used dependencies defined with tested versions across Java projects.
	-->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
		<relativePath />
	</parent>

	<groupId>io.github.raduking</groupId>
	<artifactId>apiphany</artifactId>
	<version>1.0.7</version>
	<packaging>jar</packaging>

	<name>${project.groupId}:${project.artifactId}</name>
	<description>A library to create easy REST APIs.</description>
	<url>https://github.com/raduking/apiphany</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>raduking</id>
			<name>Radu Sebastian LAZIN</name>
			<email>raduking@gmail.com</email>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/raduking/apiphany.git</connection>
		<developerConnection>scm:git:ssh://github.com:raduking/apiphany.git</developerConnection>
		<url>https://github.com/raduking/apiphany/tree/master</url>
	</scm>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- Testing dependencies versions -->
		<testcontainers.keycloak.version>3.7.0</testcontainers.keycloak.version>
		<nimbus.jose.jwt.version>10.3</nimbus.jose.jwt.version>
		<nimbus.oauth2.oidc.sdk.version>11.25</nimbus.oauth2.oidc.sdk.version>
		<pitest.plugin.version>1.19.4</pitest.plugin.version>
		<pitest.plugin.junit5.version>1.2.3</pitest.plugin.junit5.version>
		<jacoco.plugin.version>0.8.13</jacoco.plugin.version>
		<project.info.reports.plugin.version>3.9.0</project.info.reports.plugin.version>

		<!-- Publishing dependencies versions -->
		<gpg.plugin.version>3.2.7</gpg.plugin.version>
		<central.publishing.plugin.version>0.7.0</central.publishing.plugin.version>

		<apiphanyArgLine>
			-Djson-builder.to-json.indent-output=true
			-XX:+EnableDynamicAgentLoading
			-Xshare:off
			--add-opens java.base/javax.net.ssl=ALL-UNNAMED
			--add-opens java.base/sun.security.ssl=ALL-UNNAMED
		</apiphanyArgLine>
	</properties>

	<dependencies>

		<!-- MorphiX -->
		<dependency>
			<groupId>io.github.raduking</groupId>
			<artifactId>morphix-all</artifactId>
			<version>1.0.7</version>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>

		<!-- Metrics/Tracing -->
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-core</artifactId>
		</dependency>

		<!-- JSON/XML -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.github.dasniko</groupId>
			<artifactId>testcontainers-keycloak</artifactId>
			<version>${testcontainers.keycloak.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>nimbus-jose-jwt</artifactId>
			<version>${nimbus.jose.jwt.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>oauth2-oidc-sdk</artifactId>
			<version>${nimbus.oauth2.oidc.sdk.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-main-resources</id>
						<phase>process-resources</phase>
						<configuration>
							<outputDirectory>${project.build.outputDirectory}</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/resources</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-test-resources</id>
						<phase>process-test-resources</phase>
						<configuration>
							<outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
							<resources>
								<resource>
									<directory>src/test/resources</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.outputDirectory}/static/docs</outputDirectory>
							<resources>
								<resource>
									<directory>${project.build.directory}/generated-docs</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>${apiphanyArgLine}</argLine>
					<excludes>
						<exclude>**/*IT.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<argLine>${apiphanyArgLine}</argLine>
					<includes>
						<include>**/*IT.java</include>
					</includes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<additionalOptions>-Xmaxwarns 10000</additionalOptions>
				</configuration>
			</plugin>

			<!--Jacoco code coverage -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.plugin.version}</version>
				<executions>
					<execution>
						<id>pre-unit-test</id>
						<phase>test-compile</phase>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<destFile>${project.reporting.outputDirectory}/jacoco.exec</destFile>
							<propertyName>jacocoArgLine</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${project.reporting.outputDirectory}/jacoco.exec</dataFile>
							<outputDirectory>${project.reporting.outputDirectory}</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

  			<!-- Mutation testing -->
			<!-- mvn org.jacoco:jacoco-maven-plugin:prepare-agent org.pitest:pitest-maven:mutationCoverage -->
			<!-- mvn -DwithHistory org.jacoco:jacoco-maven-plugin:prepare-agent org.pitest:pitest-maven:mutationCoverage -->
			<plugin>
				<groupId>org.pitest</groupId>
				<artifactId>pitest-maven</artifactId>
				<version>${pitest.plugin.version}</version>
				<!-- Allows it to work with JUnit 5 -->
				<dependencies>
					<dependency>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-junit5-plugin</artifactId>
						<version>${pitest.plugin.junit5.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<targetClasses>
						<param>org.apiphany.*</param>
					</targetClasses>
					<targetTests>
						<param>org.apiphany.*</param>
					</targetTests>
					<verbose>false</verbose>
					<parseSurefireArgLine>false</parseSurefireArgLine>
					<argLine>${apiphanyArgLine}</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.46.1</version>
				<configuration>
					<java>
						<eclipse>
							<file>${project.basedir}/formatter/java-eclipse.xml</file>
							<version>4.35</version>
						</eclipse>
						<removeUnusedImports/>
						<trimTrailingWhitespace/>
					</java>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>apply</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>active-on-property-environment-release</id>
			<activation>
				<property>
					<name>release</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<!--
						Activate it with: -Drelease=true
					-->
					<!-- Artifact signing for publishing -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${gpg.plugin.version}</version>
						<executions>
							<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
							</execution>
						</executions>
						<configuration>
							<keyname>${env.MAVEN_GPG_PLUGIN_KEY}</keyname>
							<gpgArguments>
								<argument>--pinentry-mode</argument>
								<argument>loopback</argument>
							</gpgArguments>
						</configuration>
					</plugin>
				
					<!-- Publish to Maven Central -->
					<!-- https://central.sonatype.org/publish/publish-portal-guide/ -->
					<!-- For snapshots: https://central.sonatype.org/publish/publish-portal-snapshots/ -->
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>${central.publishing.plugin.version}</version>
						<extensions>true</extensions>
						<configuration>
							<autoPublish>true</autoPublish>
							<deploymentName>release-${project.artifactId}-${project.version}</deploymentName>
							<publishingServerId>central</publishingServerId>
						</configuration>
					</plugin>

				</plugins>
			</build>
		</profile>
    	
		<profile>
			<id>eclipse</id>
			<properties>
				<jacocoArgLine></jacocoArgLine>
			</properties>
		</profile>
	</profiles>

	<reporting>
		<!-- mvn clean install org.pitest:pitest-maven:mutationCoverage site -->

		<plugins>
			<!-- Reports -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${project.info.reports.plugin.version}</version>
			</plugin>

			<!--Jacoco code coverage -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.plugin.version}</version>
				<reportSets>
					<reportSet>
						<reports>
							<!-- select non-aggregate reports -->
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>

			<!-- Mutation testing -->
			<!-- mvn clean org.pitest:pitest-maven:mutationCoverage site -->
			<plugin>
				<groupId>org.pitest</groupId>
				<artifactId>pitest-maven</artifactId>
				<version>${pitest.plugin.version}</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

	<distributionManagement>
		<snapshotRepository>
			<id>central</id>
			<name>Central Repository Snapshots</name>
			<url>https://central.sonatype.com/repository/maven-snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</snapshotRepository>
  		<repository>
			<id>central</id>
			<name>Central Repository</name>
    		<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<repositories>
	</repositories>

</project>
